--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,36 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
+
+
 body {
     background-color: chocolate;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    text-align: center;
+    background-color: #ca2cfb;
+    padding: 20px;
+}
+
+header img {
+    width: 300;
+    height: 300;
+    border: 20px solid #ffa9dc;
+    border-radius: 50%;
+}
+
+header h1 {
+        font-family: "Jersey 10", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 100px;
+        margin: 10px 0 20px 0;
+        color: #f7f0f4;
+      
 }
