Added header background image
Added Header background image, using hero class on css file and linking it in index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,10 +14,19 @@ html, body {
 
 header {
     text-align: center;
-    background-color: #ca2cfb;
+    /* background-color: #ca2cfb; */
     padding: 20px;
 }
-
+.hero {
+    background-image: url('../img/jinx-bg.png');
+    background-size: cover;
+    background-position: center;
+    height: 450px;
+    /* color: white;
+    display: flex;
+    align-items: center; */
+    justify-content: center;
+  }
 header img {
     width: 300;
     height: 300;
