--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,38 @@
 
 
 body {
-    background-color: chocolate;
+    background-color: #d4c3dd;
+    font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 html, body {
     margin: 0;
     padding: 0;
+}
+
+p, ul, ol {
+    font-size: 20px;
+    line-height: 30px;
+}
+
+ul, ol{
+    padding: 0;
+    list-style-position: inside;
+}
+
+a {
+    color: #730b92;
+}
+a:hover {
+    color:  #ca2cfb;
+}
+
+p.caption {
+    font-size: 16px;
+    color: grey;
+    font-style: oblique;
+    margin: 0;
 }
 
 header {
@@ -23,8 +49,6 @@ header {
     background-size: cover;
     background-position: center;
     height: 450px;
-    margin: 0;
-    padding: 0;
      color: white;
     /* /* display: flex;
     align-items: center; 
@@ -43,7 +67,7 @@ header .pfp {
     margin: 0 auto;
 }
 
-header h1 {
+h1 {
         font-family: "Jersey 10", sans-serif;
         font-weight: 400;
         font-style: normal;
@@ -51,4 +75,19 @@ header h1 {
         margin: 10px 0 20px 0;
         color: #f7f0f4;
       
+}
+h2 {
+    font-family: "Jersey 10", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 50px;
+        margin: 20px 0;
+        
+}
+main {
+    width: 800px;
+    margin: 0 auto;
+}
+main img {
+    max-width: 100%;
 }
