--- a/css/styles.css
+++ b/css/styles.css
@@ -88,8 +88,9 @@ h2 {
         
 }
 main {
-    width: 800px;
+    max-width: 800px;
     margin: 0 auto;
+    padding: 0 20px;
 }
 main img {
     max-width: 100%;
@@ -102,9 +103,16 @@ footer {
     color: white;
     text-align: center;
     margin-top: 5%;
+    padding: 0 20px;
 }
 footer .content {
-    width: 800px;
+    max-width: 800px;
     margin: 0 auto;
     
+}
+
+@media (max-width: 600px) {
+    footer p{
+        font-size: 16px;
+    }
 }
