--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ html, body {
     overflow-x: hidden;
 }
 p, ul, ol {
-    font-size: 20px;
+    font-size: 14px;
     line-height: 30px;
 }
 
@@ -59,22 +59,22 @@ header {
   }  
    
 header .pfp {
-    width: 300px;
-    height: 300px;
+    width: 220px;
+    height: 220px;
     border: 20px solid #ffa9dc;
     border-radius: 50%;
     background-image: url('./../img/jinx-pfp.png');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    margin: 0 auto;
+    margin-top: 30%;
 }
 
 h1 {
         font-family: "Jersey 10", sans-serif;
         font-weight: 400;
         font-style: normal;
-        font-size: 100px;
+        font-size: 80px;
         margin: 10px 0 20px 0;
         color: #f7f0f4;
       
@@ -113,7 +113,7 @@ footer .content {
 
 @media (max-width: 600px) {
     footer p{
-        font-size: 16px;
+        font-size: 14px;
     }
     h2 {
         font-size: 40px;
