--- a/css/styles.css
+++ b/css/styles.css
@@ -59,15 +59,16 @@ header {
   }  
    
 header .pfp {
-    width: 220px;
-    height: 220px;
+    width: 300px;
+    height: 300px;
     border: 20px solid #ffa9dc;
     border-radius: 50%;
     background-image: url('./../img/jinx-pfp.png');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    margin-top: 30%;
+    margin: 0% auto;
+    
 }
 
 h1 {
